# shogi_core

./: Cargo.toml  LICENSE  Makefile  README-ja.md  README.md  bench.sh  cbindgen.toml  design-principles-ja.md  generate_header.sh
.github/workflows/: c-bindings.yml  c-shogi_core.yml  rust-shogi_core.yml  rust.yml
c_tests/: Makefile  position.c
dev/bench/: data.js
include/: shogi_core.h
shogi_core/: Cargo.toml  README-ja.md  README.md  build.rs
shogi_core/src/: annotated_derive.rs  bitboard.rs  color.rs  common.rs  game_resolution.rs  hand.rs  illegal_move_kind.rs  legality.rs  lib.rs  mv.rs  piece.rs  piece_kind.rs  position.rs  square.rs  to_usi.rs
shogi_core_c/: Cargo.toml  Makefile  README.md
shogi_core_c/src/: lib.rs  no_std.rs
