[package]
name = "shogi_core"
version = "0.1.0"
description = "Fundamental types and functions for shogi"
authors = ["Rust shogi crates developers"]
license = "MIT"
repository = "https://github.com/rust-shogi-crates/shogi_core/tree/main/shogi_core"
edition = "2021"
categories = ["game", "no-std"]
keywords = ["shogi"]
rust-version = "1.60"

[features]
default = ["std"]
alloc = []
hash = []
ord = []
std = ["alloc"]

[lib]
crate-type = [
    "rlib",
]
