[package]
name = "shogi_core"
version = "0.1.0"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.60"
description = "Fundamental types and functions for shogi"
documentation = "https://docs.rs/shogi_core"
readme = "README.md"
repository = "https://github.com/rust-shogi-crates/shogi_core/tree/main/shogi_core"
license = "MIT"
keywords = ["shogi"]
categories = ["game", "no-std"]

[features]
default = ["std"]
alloc = []
hash = []
ord = []
std = ["alloc"]

[lib]
crate-type = [
    "rlib",
]
