[package]
name = "shogi_core"
version = "0.1.1"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.60"
description = "Fundamental types and functions for shogi"
documentation = "https://docs.rs/shogi_core"
readme = "README.md"
repository = "https://github.com/rust-shogi-crates/shogi_core/tree/main/shogi_core"
license = "MIT"
keywords = ["shogi", "engine"]
categories = ["games", "game-engines", "game-development", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
alloc = []
experimental = []
hash = []
ord = []
std = ["alloc"]

[lib]
crate-type = [
    "rlib",
]
