[package]
name = "shogi_core_c"
version = "0.0.0-unpublished"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.60"
description = "C bindings of shogi_core"
repository = "https://github.com/rust-shogi-crates/shogi_core/tree/main/shogi_core_c"
license = "MIT"
keywords = ["shogi", "engine"]
categories = ["games", "game-engines", "game-development", "no-std"]
publish = false

[features]
default = ["std"]
alloc = ["shogi_core/alloc"]
experimental = ["shogi_core/experimental"]
std = ["shogi_core/std"]

[lib]
crate-type = [
    "cdylib",
]

[dependencies]
shogi_core = { path = "../shogi_core", default-features = false }
